<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:padding="@dimen/spacing_8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/CustomWrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_my_name"
        android:textSize="@dimen/font_size_18"
        app:layout_constraintBottom_toTopOf="@+id/tv_username"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView3"
        app:layout_constraintStart_toStartOf="@+id/materialCardView3"
        app:layout_constraintTop_toBottomOf="@+id/iv_user" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/CustomWrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/txt_username"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="@dimen/font_size_14"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView3"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        app:cardCornerRadius="@dimen/spacing_8"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/tv_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_username">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            style="@style/CustomNormal"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/CustomWrap"
                    android:text="@string/txt_followers" />

                <TextView
                    android:id="@+id/tv_total_followers"
                    style="@style/CustomWrap"
                    android:text="@string/txt_zero"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="@dimen/font_size_18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/CustomWrap"
                    android:text="@string/txt_following" />

                <TextView
                    android:id="@+id/tv_total_following"
                    style="@style/CustomWrap"
                    android:text="@string/txt_zero"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="@dimen/font_size_18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    style="@style/CustomWrap"
                    android:text="@string/txt_repository" />

                <TextView
                    android:id="@+id/tv_total_repository"
                    style="@style/CustomWrap"
                    android:text="@string/txt_zero"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="@dimen/font_size_18" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/txt_example_city"
        app:drawableStartCompat="@drawable/ic_baseline_location_city_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_company"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="459dp"
        android:gravity="center_vertical"
        android:text="@string/txt_google_inc"
        app:drawableStartCompat="@drawable/ic_baseline_work_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />


</androidx.constraintlayout.widget.ConstraintLayout>